# PrimeOps

./: .gitignore  README.md
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/app/api/routes/: __init__.py  health.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/db/: __init__.py  connection.py  session.py
apps/api/app/models/: __init__.py
apps/web/: .env.local.example  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/auth/callback/: page.tsx
apps/web/app/login/: page.tsx
apps/web/components/auth/: login-entry.tsx
apps/web/components/providers/: app-auth0-provider.tsx
apps/web/lib/: auth0-config.ts
docs/: 01-alcance-total-del-mvp.md  02-arquitectura-y-modelo-de-datos.md  03-api-backend-y-jobs.md  04-frontend-y-experiencia.md  05-reglas-de-negocio-e-integraciones.md  06-despliegue-y-operacion.md  07-ruta-de-construccion-y-avance.md  08-bitacora-de-implementacion.md  09-guia-de-implementacion-explicada.md
docs/anexos/: 01-variables-y-configuracion.md  02-transiciones-y-permisos.md  03-glosario.md
