[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyme-api"
version = "0.1.0"
description = "Backend FastAPI mínimo del MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
